--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<header> 
+	<h1> Accessible portfolio</h1></header>
+	<img src="" alt="">
+	<p> there is a breief description if my portfolio </p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
