--- a/main.html
+++ b/main.html
@@ -3,14 +3,23 @@
 <html>
 
 <head>
+	<title> accessible portfolio</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<header> 
-	<h1> Accessible portfolio</h1></header>
-	<img src="" alt="">
-	<p> there is a breief description if my portfolio </p>
+	<h1 role="heading"> portfolio </h1>
+	<nav role="navigation">
+		<ul> <li role="listitem"> <a href="#about">aboutme </a></li>
+		<li role="listitem"> <a href="#project">project </a></li>
+			<li role="listitem"> <a href="#contact">contact </a></li>
+		</ul>
+
+		
+	</nav>
+	<img src="" alt="photo">
+	<p>here is the portfolio imformation</p>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
