--- a/main.html
+++ b/main.html
@@ -10,14 +10,15 @@
 <body>
 	<h1 role="heading"> portfolio </h1>
 	<nav role="navigation">
-		<ul> <li role="listitem"> <a href="#about">aboutme </a></li>
+		<ul role="list"> 
+			<li role="listitem"> <a href="#about">aboutme </a></li>
 		<li role="listitem"> <a href="#project">project </a></li>
 			<li role="listitem"> <a href="#contact">contact </a></li>
 		</ul>
 
 		
 	</nav>
-	<img src="https://d3i6fh83elv35t.cloudfront.net/static/2023/05/2023-05-16T143028Z_1749954875_RC2QZ0A52H3N_RTRMADP_3_USA-AI-CONGRESS-1024x683.jpg" alt="photo">
+	<img role="image" src="https://d3i6fh83elv35t.cloudfront.net/static/2023/05/2023-05-16T143028Z_1749954875_RC2QZ0A52H3N_RTRMADP_3_USA-AI-CONGRESS-1024x683.jpg" alt="photo">
 	<p>here is the portfolio imformation</p>
 	
 	<!-- the entire body must be written by student -->
