--- a/main.html
+++ b/main.html
@@ -18,8 +18,9 @@
 
 		
 	</nav>
-	<img role="image" src="https://d3i6fh83elv35t.cloudfront.net/static/2023/05/2023-05-16T143028Z_1749954875_RC2QZ0A52H3N_RTRMADP_3_USA-AI-CONGRESS-1024x683.jpg" alt="photo">
+	<img  role="img" src="https://d3i6fh83elv35t.cloudfront.net/static/2023/05/2023-05-16T143028Z_1749954875_RC2QZ0A52H3N_RTRMADP_3_USA-AI-CONGRESS-1024x683.jpg" alt="photo ">
 	<p>here is the portfolio imformation</p>
+	
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
